# LightRSS

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  TODO.md  conanfile.txt
.github/workflows/: cmake-multi-platform.yml  cmake-test.yml
include/core/: lrss_fetcher.h  lrss_parser.h  lrss_storage.h  lrss_structs.h
src/: main.cpp
src/core/: lrss_fetcher.cpp  lrss_parser.cpp  lrss_parser_atom.cpp  lrss_parser_rss.cpp  lrss_storage.cpp
tests/: CMakeLists.txt  constants.h  test_curl.cpp  test_fetcher.cpp
tests/include/: constants.h
tests/src/: constants.cpp  main.cpp  test_fetcher.cpp  test_parser.cpp  test_storage.cpp
